<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sign_in"
        android:text="@string/bank_app"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:layout_margin="50dp"
        android:gravity="center"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@+id/sign_in"
        android:hint="@string/username"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:inputType="text"
        android:autofillHints="name"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password_toggle"
        android:layout_below="@+id/username"
        android:hint="@string/password"
        android:background="@drawable/rounded_corner"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_margin="15dp"
        android:padding="20dp"
        android:drawableStart="@drawable/baseline_password_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:autofillHints="password"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:layout_below="@id/password_toggle"
        android:layout_centerHorizontal="true"
        android:text="@string/Login"
        android:layout_margin="60dp"
        android:textSize="24sp"
        android:backgroundTint="@color/login_button"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_pass"
        android:layout_below="@id/login"
        android:text="@string/forgot"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        />
</RelativeLayout>

